New admonition for product migration.

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -4,39 +4,49 @@
 == Introduction
 
 Product migration allows you to upgrade SLE-based client systems from an Service Pack (SP) level to a later one.
-For example, you can migrate {sles}{nbsp}15{nbsp}SP1 to {sles}{nbsp}15{nbsp}SP2.
+For example, you can migrate {sles}{nbsp}15{nbsp}SP5 to {sles}{nbsp}15{nbsp}SP6.
 You can also upgrade clients such as {almalinux}, {centos}, {oracle}, or {rocky} to {sll}.
+
+[IMPORTANT]
+====
+Product migration requires that all repositories which are enabled on the client and which should be migrated must be valid, otherwise the migration will abort.
+====
+
+{productname} supports the following migration paths:
+
+=== Migration within the same major version
 
 Product migration is for upgrading within the same major version.
 You cannot use product migration to migrate from {sles}{nbsp}12 to {sles}{nbsp}15.
 For more information about major upgrades, see xref:client-configuration:client-upgrades-major.adoc[].
 
-You can also migrate openSUSE Leap to a later minor version or to the corresponding {sles} SP level, for example:
 
-* openSUSE Leap 15.1 to 15.2
-* openSUSE Leap 15.1 to {sles} 15 SP1
-* openSUSE Leap 15.5 to {sles} 15 SP5
+=== Migration of {leap} to a later minor version or to the corresponding {sles} SP
+
+You can also migrate {leap} to a later minor version or to the corresponding {sles} SP level, for example:
+
+* {leap} 15.5 to 15.6
+* {leap} 15.6 to {sles} 15 SP6
+
+
+=== Migration of {sles} to the corresponding {slesforsap} SP level
 
 You can also migrate {sles} to the corresponding {slesforsap} SP level, for example:
 
 * {sles} 15 SP5 to {slesforsap} 15 SP5
 
+
 In {sles}{nbsp}12 and later, {suse} supports service pack skipping if {scclongform} provides it.
 For example, you can upgrade from {sles}{nbsp}15 to SP2, without installing SP1.
 
-For supported {sles} upgrade paths, see link:https://documentation.suse.com/en-us/sles/15-SP4/html/SLES-all/cha-upgrade-paths.html#sec-upgrade-paths-supported[].
+For supported {sles} upgrade paths, see link:https://documentation.suse.com/en-us/sles/15-SP6/html/SLES-all/cha-upgrade-paths.html#sec-upgrade-paths-supported[].
 
 
 [NOTE]
 ====
-All recommended extensions are automatically enabled when you migrate.
-====
+* All recommended extensions are automatically enabled when you migrate.
 
-
-
-[NOTE]
-====
-During migration, {productname} automatically accepts any required licenses (EULAs) before installation.
+* During migration, {productname} automatically accepts any required licenses (EULAs) before installation.
 ====
 
 
