several fixes: typos, sl-micro and microversion macro, etc. (#3718)
* several fixes: typos, sl-micro and microversion macro,
remove uyunicontent from mlm only files, etc.

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -1,7 +1,9 @@
 [[install-hardware-requirements]]
 = Hardware Requirements
+ifeval::[{uyuni-content} == true]
+:noindex:
+endif::[]
 
-ifeval::[{mlm-content} == true]
 This table outlines hardware and software requirements for the {productname} Server and Proxy, on {x86_64}, {arm}, {ppc64le} and {s390x} architecture.
 
 
@@ -10,15 +12,8 @@ This table outlines hardware and software requirements for the {productname} Ser
 {productname} installations based on {ppc64le} or {s390x} architecture cannot use secure boot for network booting clients.
 This limitation exists because the shim bootloader is not available for both these architectures.
 ====
-endif::[]
 
-ifeval::[{uyuni-content} == true]
-This table outlines hardware and software requirements for the {productname} Server and Proxy on {x86_64}, and {arm} architecture.
-endif::[]
-
-//ifeval::[{mlm-content} == true]
 //For {ibmz} hardware requirements, see xref:installation-and-upgrade:install-ibmz.adoc[].
-//endif::[]
 
 For {productname} {smr} hardware requirements, see xref:retail:retail-requirements.adoc[].
 
@@ -27,7 +22,7 @@ For {productname} {smr} hardware requirements, see xref:retail:retail-requiremen
 [[server-hardware-requirements]]
 == Server Requirements
 
-{sle-micro} {microversion} is ths operation system of the container host and requires as free disk space:
+{sl-micro} {microversion} is the operating system of the container host and requires as free disk space:
 
 * Minimum for base installation 100 GB
 * Plus a minimum of 130 GB for repository data
@@ -85,7 +80,7 @@ For more information about filesystem and partitioning details, see xref:install
 
 
 The images by default have a 20 GB [literal]``/`` partition.
-The cloud image of {sle-micro} 5.5 has just a 5 GB [literal]``/`` partition. Both work flawlessly with {productname}.
+The cloud image of {sl-micro} {microversion} has just a 5 GB [literal]``/`` partition. Both work flawlessly with {productname}.
 As long as external storage is mounted to [path]``/var/lib/containers/storage/volumes``, {productname} does not need or use storage on the [literal]``/`` partition, but leaves that to the management of the container host itself.
 
 
