--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -29,7 +29,7 @@ You can also migrate {leap} to a later minor version or to the corresponding {sl
 * {leap} 15.6 to {sles} 15 SP6
 
 
-=== Migration of {sles} to the corresponding {slesforsap} SP level
+=== Migration of {sles} to the corresponding {slesforsap} SP
 
 You can also migrate {sles} to the corresponding {slesforsap} SP level, for example:
 
