--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -5,6 +5,11 @@ Product migration allows you to upgrade SLE-based client systems from an Service
 You can also upgrade clients such as {almalinux}, {centos}, {oracle}, or {rocky} to {sll}.
 For example, you can migrate {sles}{nbsp}15{nbsp}SP1 to {sles}{nbsp}15{nbsp}SP2.
 
+[IMPORTANT]
+====
+Product migration requires that all repositories which are enabled on the client and which should be migrated must be valid, otherwise the migration will abort.
+====
+
 Product migration is for upgrading within the same major version.
 You cannot use product migration to migrate from {sles}{nbsp}12 to {sles}{nbsp}15.
 For more information about major upgrades, see xref:client-configuration:client-upgrades-major.adoc[].
