Start adding SLES15SP6 for Manager installation.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -4,7 +4,8 @@ ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
 
-This guide shows you how to install and configure a {productname} {productnumber} container on {sle-micro} {microversion}.
+This guide shows you how to install and configure a {productname} {productnumber} container on {sle-micro} {microversion} or {sles} 15 SP6.
+
 
 // Link to hardware requirements do not show them here. We list them on other pages.
 // Done within next section.
