--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -294,6 +294,19 @@ systemctl enable --now transactional-update.timer
 In this guide you deployed {productname} {productnumber} Server as a container.
 Proceed to the next section to add your organization credentials for syncing with {scclongform}.
 
+== [DRAFT] Install SLES 15 SP6
+
+.Procedure
+. Download ISO
+. install sles15sp6
+. the SCC code must have Extensions enabled 
+. at the Extensions screen select the MLM extension
+. don't forget to add Containers Module too
+. complete the installation
+. log in to the server
+. zypper install podman
+. followed by manually installing mgr... install podman
+
 
 == Connect {productname} {productnumber} to {scclongform}
 
