--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -294,18 +294,29 @@ systemctl enable --now transactional-update.timer
 In this guide you deployed {productname} {productnumber} Server as a container.
 Proceed to the next section to add your organization credentials for syncing with {scclongform}.
 
-== [DRAFT] Install SLES 15 SP6
+== [DRAFT] Install {productname} on SLES 15 SP6
 
 .Procedure
-. Download ISO
-. install sles15sp6
-. the SCC code must have Extensions enabled 
-. at the Extensions screen select the MLM extension
-. don't forget to add Containers Module too
-. complete the installation
-. log in to the server
-. zypper install podman
-. followed by manually installing mgr... install podman
+. Download SLES 15 SP6 ISO.
+. Make sure that the {scc} code you plan to use has the Extensions enabled.
+. Install SLES 15 15 SP6.
+. In the screen [literal]``Extensions and Modules Selection`` check the following:
+  .. {productname} Server Extension
+  .. Basesystem Module
+  .. Containers Module
+. Complete the installation.
+. Log in to the newly installed server as root.
+. As root, run 
++
+----
+zypper install podman
+----
++
+. Finish the {productname} installation on SLES 15 SP6 by running command:
++
+----
+mgradm install podman
+----
 
 
 == Connect {productname} {productnumber} to {scclongform}
