--- a/modules/administration/pages/troubleshooting/tshoot-container-inspection.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-container-inspection.adoc
@@ -21,7 +21,7 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 . Last step
 ////
 
-The base container image (BCI) comes with all the software to run {productname}, but—because BCIs are lightweight—they may not come with all tools and libraries you may need for debugging.
+The base container image (BCI) comes with all the software to run {productname}, but because BCIs are lightweight they may not come with all tools and libraries you may need for debugging.
 
 While inspecting a container image with {productname} you can see an error message such as:
 
