Change the navbar.

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -35,7 +35,7 @@ endif::[]
 ifeval::[{suma-content} == true]
 ** Installation and Deployment
 *** Server
-**** xref:container-deployment/suma/server-deployment-suma.adoc[{productname} Deployment on {sle-micro}]
+**** xref:container-deployment/suma/server-deployment-suma.adoc[{productname} Deployment]
 **** xref:container-deployment/suma/server-deployment-vm-suma.adoc[Server Deployment as Virtual Machine - KVM]
 **** xref:container-deployment/suma/server-deployment-vmdk-suma.adoc[Server Deployment as Virtual Machine - VMware]
 **** xref:container-deployment/suma/server-air-gapped-deployment-suma.adoc[Air-gapped Deployment]
