Further work on the procedure.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -31,6 +31,7 @@ For background information about disk space, see xref:installation-and-upgrade:h
 | Swap space:            | 3 GB
 |===
 
+////
 .Supported operating system for the Server Container Host
 [NOTE]
 ====
@@ -42,7 +43,7 @@ These containers hold applications and their essential parts, such as libraries,
 This setup ensures applications run the same way in different environments.
 The container host supplies the necessary resources such as CPU, memory, and storage for these containers.
 ====
-
+////
 
 [IMPORTANT]
 ====
@@ -97,7 +98,7 @@ For a list of all persistent volumes in the container, see xref:installation-and
 
 
 [[deploy-suma-server-micro]]
-== {sle-micro} {microversion} Installation
+==  Deploy {productname} {sle-micro} {microversion}
 
 .Procedure: Download the Installation Media
 . Locate the {sle-micro} {microversion} installation media at https://www.suse.com/download/sle-micro/.
@@ -233,6 +234,38 @@ For more information, see
 ====
 
 
+ifeval::[{suma-content} == true]
+== Install {productname} on SLES 15 SP6
+
+Alternatively, you can install {productname} on SLES 15 SP6.
+The following steps describe the main steps iof the installation process.
+
+.Procedure
+. Locate and downlaod SLES 15 SP6 [litaral]``.iso`` at https://www.suse.com/download/sles/.
+. Make sure that the {scc} code you plan to use has the Extensions enabled.
+. Start the installation of SLES 15 SP6.
+  .. On the [literal]``Language, keyboard and product selection`` select the product to install.
+  .. On the [literal]``License agreement`` read the agreement and check [checkbox]``I Agree to the License Terms``.
+. Select the registration method. 
+. In the screen [literal]``Extensions and Modules Selection`` check the following:
+  * {productname} Server Extension
+  * Basesystem Module
+  * Containers Module
+. Complete the installation.
+. When the installation completes, log in to the newly installed server as root.
+. As root, run
++
+----
+zypper install podman
+----
++
+. Finish the {productname} installation on SLES 15 SP6 by running command:
++
+----
+mgradm install podman
+----
+endif::[]
+
 
 [[deploy-suma-server-mgradm]]
 == Deploy with [literal]``mgradm``
@@ -293,30 +326,6 @@ systemctl enable --now transactional-update.timer
 
 In this guide you deployed {productname} {productnumber} Server as a container.
 Proceed to the next section to add your organization credentials for syncing with {scclongform}.
-
-== [DRAFT] Install {productname} on SLES 15 SP6
-
-.Procedure
-. Download SLES 15 SP6 ISO.
-. Make sure that the {scc} code you plan to use has the Extensions enabled.
-. Install SLES 15 15 SP6.
-. In the screen [literal]``Extensions and Modules Selection`` check the following:
-  .. {productname} Server Extension
-  .. Basesystem Module
-  .. Containers Module
-. Complete the installation.
-. Log in to the newly installed server as root.
-. As root, run 
-+
-----
-zypper install podman
-----
-+
-. Finish the {productname} installation on SLES 15 SP6 by running command:
-+
-----
-mgradm install podman
-----
 
 
 == Connect {productname} {productnumber} to {scclongform}
