Added OS to the requirements table.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -20,7 +20,9 @@ For background information about disk space, see xref:installation-and-upgrade:h
 .Software and Hardware Requirements
 |===
 | Software and Hardware  | Recommended
-| Operating System       | {sle-micro} {microversion}
+| Operating System       | {sle-micro} {microversion} or
+
+                           {sles} {sles-version} {sp-version}
 | Architecture           | {x86_64}, {arm}, {s390x}, {ppc64le}
 | Processor (CPU)        | Minimum of four (4) 64-bit CPU cores
 | RAM                    | 16 GB
@@ -84,12 +86,11 @@ Recommended minimum size for this is at least 300 GB, and larger if there will 
 Recommended Filesystem::
 XFS (though any supported filesystem for {sle-micro} {microversion} could work).
 
-====
-
 Optional::
 You can provide custom storage for the volumes by mounting disks on the expected volume path inside it such as [path]``/var/lib/containers/storage/volumes/var-spacewalk``.
 This adds to the complexity of a {productname} deployment, and may affect the resilience the default storage recommendation provides.
 
+====
 
 For a list of all persistent volumes in the container, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
 
@@ -222,7 +223,6 @@ For example:
 mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
 ----
 +
-
 [NOTE]
 ====
 This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
