Added HW requirements.

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -33,11 +33,10 @@ For background information about disk space, see xref:installation-and-upgrade:h
 | Swap space:            | 3 GB
 |===
 
-////
 .Supported operating system for the Server Container Host
 [NOTE]
 ====
-The supported operating system for the container host is {sle-micro} {microversion}.
+The supported operating system for the container host is {sle-micro} {microversion} or or {sles} {sles-version}6.
 
 Container host::
 A container host is a server equipped with a container engine like [systemitem]``Podman``, which lets it manage and deploy containers.
@@ -45,7 +44,6 @@ These containers hold applications and their essential parts, such as libraries,
 This setup ensures applications run the same way in different environments.
 The container host supplies the necessary resources such as CPU, memory, and storage for these containers.
 ====
-////
 
 [IMPORTANT]
 ====
