--- a/modules/administration/pages/troubleshooting/tshoot-container-inspection.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-container-inspection.adoc
@@ -21,15 +21,15 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 . Last step
 ////
 
-The base container image (BCI) comes with all the software to run {productname}, but because BCIs are lightweight they may not come with all tools and libraries you may need for debugging.
+The base container image (BCI) comes with all the software to run it, but because BCIs are lightweight they may not come with all tools and libraries you may need for debugging.
 
-While inspecting a container image with {productname} you can see an error message such as:
+When inspecting a container image you can see an error message such as:
 
 ----
 libssl.so.1.1: cannot open shared object file: No such file or directory
 ----
 
-BCI image can be used in the other scenarious than with the container build host and using the {salt} bundle for the inspection, but if you need inspection to work you need to add it in advance.
+A BCI can be used in the other scenarios than with the container build host and using the {salt} bundle for the inspection, but if you need inspection to work you must add it in advance.
 
 To avoid such issues you must add [systemitem]``libopenssl`` to the image with [systemitem]``Dockerfile`` (but not to the BCI) and rebuild the container image with it inside.
 
