move file to image management chapter and update

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -76,7 +76,10 @@ From the {productname} {webui}, perform these steps to configure a build host:
 . Install all required packages by applying [systemitem]``Highstate``.
   From the system details tab select menu:States[Highstate], and click btn:[Apply Highstate].
   Alternatively, apply [systemitem]``Highstate`` from the {productname} Server command line:
+
 +
+
+[source,shell]
 ----
 salt '$your_client' state.highstate
 ----
@@ -331,6 +334,12 @@ The status icon for the imported image can also be seen on the ``Overview`` tab 
 [[at.images.docker.troubleshooting]]
 === Troubleshooting
 
+
+
+include::image-mgmt-container-inspection.adoc[]
+
+
+==== General Issues
 
 These are some known problems when working with images:
 
