--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -1,10 +1,10 @@
 [[deploy-suma-server]]
-= {productname} {productnumber} Server Deployment on {sle-micro}
+= {productname} {productnumber} Server Deployment
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
 
-This guide shows you how to install and configure a {productname} {productnumber} container on {sle-micro} {microversion} or {sles} 15 SP6.
+This guide shows you how to install and configure a {productname} {productnumber} container on {sle-micro} {microversion} or {sles} {bci-suma}.
 
 
 // Link to hardware requirements do not show them here. We list them on other pages.
@@ -22,7 +22,7 @@ For background information about disk space, see xref:installation-and-upgrade:h
 | Software and Hardware  | Recommended
 | Operating System       | {sle-micro} {microversion} or
 
-                           {sles} {sles-version} {sp-version}
+                           {sles} {bci-suma}
 | Architecture           | {x86_64}, {arm}, {s390x}, {ppc64le}
 | Processor (CPU)        | Minimum of four (4) 64-bit CPU cores
 | RAM                    | 16 GB
@@ -36,7 +36,7 @@ For background information about disk space, see xref:installation-and-upgrade:h
 .Supported operating system for the Server Container Host
 [NOTE]
 ====
-The supported operating system for the container host is {sle-micro} {microversion} or or {sles} {sles-version}6.
+The supported operating system for the container host is {sle-micro} {microversion} or {sles} {bci-suma}.
 
 Container host::
 A container host is a server equipped with a container engine like [systemitem]``Podman``, which lets it manage and deploy containers.
@@ -239,9 +239,9 @@ Alternatively, you can install {productname} on SLES 15 SP6.
 The following steps describe the main steps iof the installation process.
 
 .Procedure
-. Locate and downlaod SLES 15 SP6 [litaral]``.iso`` at https://www.suse.com/download/sles/.
+. Locate and downlaod {sles} {bci-suma} [literal]``.iso`` at https://www.suse.com/download/sles/.
 . Make sure that the {scc} code you plan to use has the Extensions enabled.
-. Start the installation of SLES 15 SP6.
+. Start the installation of {sles} {bci-suma}.
   .. On the [literal]``Language, keyboard and product selection`` select the product to install.
   .. On the [literal]``License agreement`` read the agreement and check [checkbox]``I Agree to the License Terms``.
 . Select the registration method. 
