replace debugging with inspection (per feedback)

--- a/modules/administration/pages/image-mgmt-container-inspection.adoc
+++ b/modules/administration/pages/image-mgmt-container-inspection.adoc
@@ -1,6 +1,6 @@
 ==== Image Inspection
 
-A base container image (BCI) comes with all the software to run it, but because BCIs are lightweight they may not come with all tools and libraries you may need for debugging.
+A base container image (BCI) comes with all the software to run it, but because BCIs are lightweight they may not come with all tools and libraries you may need for inspection.
 
 When inspecting a container image you can see an error message such as:
 
