--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -233,12 +233,12 @@ For more information, see
 
 
 ifeval::[{suma-content} == true]
-== Install {productname} on SLES 15 SP6
+== Install {productname} on {sles} {bci-suma}
 
-Alternatively, you can install {productname} on SLES 15 SP6.
+Alternatively, you can install {productname} on {sles} {bci-suma}.
 The following steps describe the main steps iof the installation process.
 
-.Procedure
+.Procedure: Installing {productname} on {sles} {bci-suma}
 . Locate and downlaod {sles} {bci-suma} [literal]``.iso`` at https://www.suse.com/download/sles/.
 . Make sure that the {scc} code you plan to use has the Extensions enabled.
 . Start the installation of {sles} {bci-suma}.
@@ -257,7 +257,7 @@ The following steps describe the main steps iof the installation process.
 zypper install podman
 ----
 +
-. Finish the {productname} installation on SLES 15 SP6 by running command:
+. Finish the {productname} installation on {sles} {bci-suma} by running command:
 +
 ----
 mgradm install podman
