--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -97,7 +97,7 @@ For a list of all persistent volumes in the container, see xref:installation-and
 
 
 [[deploy-suma-server-micro]]
-==  Deploy {productname} {sle-micro} {microversion}
+==  Deploy {productname} on {sle-micro} {microversion}
 
 .Procedure: Download the Installation Media
 . Locate the {sle-micro} {microversion} installation media at https://www.suse.com/download/sle-micro/.
