--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -236,7 +236,7 @@ ifeval::[{suma-content} == true]
 == Install {productname} on {sles} {bci-suma}
 
 Alternatively, you can install {productname} on {sles} {bci-suma}.
-The following procedure describe the main steps of the installation process.
+The following procedure describes the main steps of the installation process.
 
 .Procedure: Installing {productname} on {sles} {bci-suma}
 . Locate and downlaod {sles} {bci-suma} [literal]``.iso`` at https://www.suse.com/download/sles/.
