--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -58,7 +58,7 @@ This sections describes VMware configurations, focusing on the creation of an ex
 . Download {productname} Proxy [filename]``.vmdk`` file then transfer a copy to your VMware storage.
 
 . Make a copy of uploaded [filename]``.vmdk`` file using VMware web interface.
-  This will convert provided [filename]``.vmdk`` file to the format suitable for vSpere hypervisor.
+  This will convert provided [filename]``.vmdk`` file to the format suitable for vSphere hypervisor.
 
 . Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit).
 
