fixed typo https://bugzilla.suse.com/show_bug.cgi?id=1237403 https://github.com/SUSE/spacewalk/issues/26516

--- a/modules/installation-and-upgrade/pages/install-proxy-vmdk.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy-vmdk.adoc
@@ -47,7 +47,7 @@ This sections describes VMware configurations, focusing on the creation of an ex
   Then transfer a copy to your VMware storage.
 
 . Make a copy of uploaded [filename]``.vmdk`` file using VMware web interface.
-  This will convert provided [filename]``.vmdk`` file to the format suitable for vSpere hypervisor.
+  This will convert provided [filename]``.vmdk`` file to the format suitable for vSphere hypervisor.
   Use this new copy as a base image for the virtual machine.
 
 . Create and name a new virtual machine based on the Guest OS Family [systemitem]``Linux`` and Guest OS Version {sle} 15 (64-bit).
