--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -243,7 +243,7 @@ The following procedure describes the main steps of the installation process.
 . Make sure that the {scc} code you plan to use has the Extensions enabled.
 . Start the installation of {sles} {bci-suma}.
   .. On the [literal]``Language, keyboard and product selection`` select the product to install.
-  .. On the [literal]``License agreement`` read the agreement and check [checkbox]``I Agree to the License Terms``.
+  .. On the [literal]``License agreement`` read the agreement and check [guimenu]``I Agree to the License Terms``.
 . Select the registration method. 
 . In the screen [literal]``Extensions and Modules Selection`` check the following:
   * {productname} Server Extension
