--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -239,7 +239,7 @@ Alternatively, you can install {productname} on {sles} {bci-suma}.
 The following procedure describes the main steps of the installation process.
 
 .Procedure: Installing {productname} on {sles} {bci-suma}
-. Locate and downlaod {sles} {bci-suma} [literal]``.iso`` at https://www.suse.com/download/sles/.
+. Locate and download {sles} {bci-suma} [literal]``.iso`` at https://www.suse.com/download/sles/.
 . Make sure that the {scc} code you plan to use has the Extensions enabled.
 . Start the installation of {sles} {bci-suma}.
   .. On the [literal]``Language, keyboard and product selection`` select the product to install.
