--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -252,7 +252,10 @@ The following procedure describes the main steps of the installation process.
 . Complete the installation.
 . When the installation completes, log in to the newly installed server as root.
 . As root, run
+
 +
+
+[source,shell]
 ----
 zypper install podman
 ----
