--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -23,6 +23,14 @@ Supported client operating systems are listed in this table. The icons in the ta
 * {cross} clients running this operating system are not supported by {suse}
 * {question} clients are under consideration, and may or may not be supported at a later date.
 
+[IMPORTANT]
+====
+The {productname} supports multiple major versions of non-SUSE client operating systems.
+However, only the latest minor release of each supported major version is fully supported.
+
+Older minor releases might still work, but will only be supported on a limited and reasonable-effort basis. 
+If issues arise on an outdated minor release, users will be asked to upgrade to the latest available minor version before further support is provided.
+====
 
 [[mgr.support.clients]]
 [cols="2,1,1,1", options="header"]
