--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -14,6 +14,9 @@ For details on supported product versions, see:
 link:https://www.suse.com/lifecycle[]
 
 For non-{suse} operating systems, including {rhel}, {centos}, and {oracle}, only the latest available version is under general support.
+
+Older minor releases might still work, but will only be supported on a limited and reasonable-effort basis. 
+If issues arise on an outdated minor release, users will be asked to upgrade to the latest available minor version before further support is provided.
 ====
 
 [[mgr.support.clients]]
